@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-21T01:05:17Z",
+  "timestamp" : "2022-07-21T08:15:34Z",
   "count_outdated" : 404,
   "uniques_outdated" : 219,
   "count" : 427,
-  "uniques" : 231,
+  "uniques" : 232,
   "clones" : [
     {
       "timestamp": "2022-07-07T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -74,6 +74,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-07-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
